src/scss/hero.scss
section {
	
	height: 100vh;
	max-width: 1440px;
	margin: 0 auto;

	.hero {

		margin: 0 auto;
		position: relative;
		overflow: hidden;
		visibility: hidden;
		border: 1px black solid;

		// display: flex;
		// flex-direction: row;
		// flex-wrap: wrap;
		// justify-content: space-between;
		// align-items: stretch;

		background-image: url(images/background_dt_2x.png);
		background-size: cover;
		background-repeat: no-repeat;
		background-position: center center;

		@include media(">=desktop") {
			background-image: url(images/background_dt_2x.png);
			// border: 5px red solid;
			min-height: 400px;
		}
		@include media("<=tablet") {
			background-image: url(images/background_dt_2x.png);
			// border: 5px white solid;
			min-height: 650px;
		}
		@include media("<=phone") {
			background-image: url(images/background_mo_2x.png);
			// border: 5px blue solid;
			min-height: 100vh;
			overflow: auto;
		}

		.pic-container {
			position: absolute;
			width: 100%;
			height: 100%;

			@include media(">=desktop") {
				max-width: 900px;
			}
			@include media("<=tablet") {
				// max-width: 100%;
			}
			@include media("<=phone") {
				// max-width: 100%;
			}

			svg {
				position: absolute;
				left: 0;
				width: 100%;

				// image: {
				// 	width: 100%;
				// }
			}
			svg#wave-dt {
				@include media(">=desktop") {
					display: block; 
					bottom: 0;
				}
				@include media("<=tablet") {display: none; }
				// @include media("<=phone") {display: none; }
			}
			svg#wave-tab {
				@include media("<=tablet") {
					display: block;
					bottom: 0;
					height: clamp(319px, 40vw, 413px);
				}
				@include media(">=desktop") {display: none;}
				@include media("<=phone") {display: none;}
			}
			svg#wave-mo {
				@include media("<=phone") {
					display: block;
					top: 0;
					height: clamp(319px, 40vw, 413px);
				}
				@include media(">=desktop") {display: none;}
				@include media("<=tablet") {display: none;}
			}

			img.pic {
				position: absolute;
			}

			#pic-dt {
				@include media(">=desktop") {
					display: block;
					clip-path:url(#wave-mask-dt);
					top: 0;
					height: 100%;
				}
				@include media("<=tablet") {display: none; }
				// @include media("<=phone") {display: none; }
			}
			#pic-tab {
				@include media("<=tablet") {
					display: block;
					// clip-path:url(#wave-mask-tab);
					width: 100%;
					bottom: 0;
				}
				@include media(">=desktop") {display: none;}
				@include media("<=phone") {display: none;}
			}
			#pic-mo {
				@include media("<=phone") {
					display: block;
					// position: absolute;
					// clip-path: url(#wave-mask-mo);
					width: 100%;
					top: 0;
				}
				@include media(">=desktop") {display: none;}
				@include media("<=tablet") {display: none;}
			}
		}

		.lockup-container {
			position: absolute;
			color: white;
			text-align: center;
			width: 100%;
			// border: 2px dotted red;

			@include media(">=desktop") {
				right: 0;
				max-width: 660px;
				width: clamp(50%, 1vw, 60%);
			}
			@include media("<=tablet") {
				margin: 4em auto 0;
			}
			@include media("<=phone") {
				// position: relative;
				margin: clamp(14em, 76vw, 35em) auto 0;
			}

			& * span {
				display: inline;
			}

			#logo-wrapper {
				@include media(">=desktop") {
					margin: 2em auto 0.5em;
					width: 64%;
				}
				@include media("<=tablet") {
					// margin: 5% auto 0.5em;
					width: 41%;
					// transform: translateX(-50%);
				}
				@include media("<=phone") {
					width: clamp(250px, 66vw, 67%);
					margin: 0em auto 1em;
				}
			}
			#txt-wrapper {

				@include media("<=tablet") {
					position: absolute;
					width: 39%;
					right: 1%;
					top: 0;
				}
				@include media("<=phone") {
					position: relative;
					margin: 0 auto 5em;
					width: clamp(250px, 66vw, 67%);
				}

				h1 {
					font: {
						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
						weight: 700;
						style: normal;
					}
					@include media(">=desktop") {
						font-size: clamp(20px, 2vw, $font-dt);
						margin-bottom: 0.4em;
					}
					@include media("<=tablet") {
						font-size: clamp(20px, 3vw, $font-tab);
						margin-bottom: 0.4em;
						padding: 0 12%;
					}
					@include media("<=phone") {
						font-size: clamp(20px, 6vw, 39px);						
					}
				}

				p#txt {
					max-width: 80%;
					margin: 0 auto 1rem;
					font: {
						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
						weight: 400;
						style: normal;
					}

					@include media(">=desktop") {
						// position: absolute;
						font-size: clamp(15px, 2vw, 19px);
						margin-bottom: 1.5em;
						max-width: 68%;//25rem;
						// right: 3%;//80px;
						// top: 50px;
					}
					@include media("<=tablet") {
					  // font-size: clamp(24px, 3vw, $font-tab);
					}
					@include media("<=phone") {
					  font-size: clamp(13px, 4vw, 27px);
					}
				}
				button.cta {
					background-color: white;
					border-radius: 1em;
					border: 0;
					color: $darkGreen;
					font: {
						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
						weight: 700;
						style: normal;
					}
					padding: 5px 1rem;
					margin: 0 auto;

					@include media(">=desktop") {
						font-size: 1em;
					}
					@include media("<=tablet") {
						font-size: 1.15em;
					}
					@include media("<=phone") {
						font-size: 1em;
					}
				}
			}
		}
	}
}

